k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-backstage
  namespace: gateway-backstage
  labels:
    app: gateway-backstage
    managed-by: backstage
    type: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-backstage
  template:
    metadata:
      labels:
        app: gateway-backstage
    spec:
      containers:
      - name: gateway-backstage
        image: durellirsd/gateway-backstage:v0.0.0
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
          requests:
            memory: "384Mi"
            cpu: "300m"
          limits:
            memory: "768Mi"
            cpu: "600m"
